--- a/submissions/Run3_2022.yaml
+++ b/submissions/Run3_2022.yaml
@@ -1,354 +1,564 @@
 DYto2L_M_10to50_amcatnloFXFX.json: 'Job successfully submitted.
 
-  Job id: f648bfa4-9a9e-11ef-a983-525400e091e6
+  Job id: 5864ed34-9bb2-11ef-a61c-525400e091e6
 
   '
 DYto2L_M_10to50_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: f6b8c6dc-9a9e-11ef-9053-525400e091e6
+  Job id: 58dc480c-9bb2-11ef-9300-525400e091e6
 
   '
 DYto2L_M_50_0J_amcatnloFXFX.json: 'Job successfully submitted.
 
-  Job id: f731df40-9a9e-11ef-9053-525400e091e6
+  Job id: 595a38d4-9bb2-11ef-8a7b-525400e091e6
 
   '
 DYto2L_M_50_1J_amcatnloFXFX.json: 'Job successfully submitted.
 
-  Job id: f7abaaa0-9a9e-11ef-a983-525400e091e6
+  Job id: 59d4c810-9bb2-11ef-9300-525400e091e6
 
   '
 DYto2L_M_50_1J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: f820b9da-9a9e-11ef-9053-525400e091e6
+  Job id: 5a4c0baa-9bb2-11ef-8a7b-525400e091e6
 
   '
 DYto2L_M_50_2J_amcatnloFXFX.json: 'Job successfully submitted.
 
-  Job id: f8956d0c-9a9e-11ef-92db-525400e091e6
+  Job id: 5ac6870e-9bb2-11ef-a61c-525400e091e6
 
   '
 DYto2L_M_50_2J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: f90b1ec6-9a9e-11ef-9053-525400e091e6
+  Job id: 5b4b98ae-9bb2-11ef-b564-525400e091e6
 
   '
 DYto2L_M_50_3J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: f97cf15e-9a9e-11ef-9053-525400e091e6
+  Job id: 5bbf2166-9bb2-11ef-a61c-525400e091e6
 
   '
 DYto2L_M_50_4J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: f9ecc8e4-9a9e-11ef-a983-525400e091e6
+  Job id: 5c35bd58-9bb2-11ef-9300-525400e091e6
 
   '
 DYto2L_M_50_amcatnloFXFX.json: 'Job successfully submitted.
 
-  Job id: fada0208-9a9e-11ef-9053-525400e091e6
+  Job id: 5d2983ca-9bb2-11ef-a61c-525400e091e6
 
   '
 DYto2L_M_50_amcatnloFXFX_ext1.json: 'Job successfully submitted.
 
-  Job id: fa61bc6c-9a9e-11ef-a983-525400e091e6
+  Job id: 5cadddba-9bb2-11ef-8a7b-525400e091e6
 
   '
 DYto2L_M_50_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: fbc8fcdc-9a9e-11ef-b91f-525400e091e6
+  Job id: 5e480740-9bb2-11ef-a61c-525400e091e6
 
   '
 DYto2L_M_50_madgraphMLM_ext1.json: 'Job successfully submitted.
 
-  Job id: fb5083e2-9a9e-11ef-9053-525400e091e6
+  Job id: 5da500b8-9bb2-11ef-8a7b-525400e091e6
 
   '
 DoubleMuon_Run2022C.json: 'Job successfully submitted.
 
-  Job id: f5d3b952-9a9e-11ef-b91f-525400e091e6
+  Job id: 57f0853e-9bb2-11ef-a61c-525400e091e6
 
   '
 EGamma_Run2022C.json: 'Job successfully submitted.
 
-  Job id: fc44eea0-9a9e-11ef-a983-525400e091e6
+  Job id: 5f16cc1a-9bb2-11ef-b564-525400e091e6
 
   '
 EGamma_Run2022D.json: 'Job successfully submitted.
 
-  Job id: fcfbb1ee-9a9e-11ef-b91f-525400e091e6
+  Job id: 5ffc66c6-9bb2-11ef-a61c-525400e091e6
 
   '
 GluGluHTo2Tau_UncorrelatedDecay_CPodd_Filtered_ProdAndDecay.json: 'Job successfully
   submitted.
 
-  Job id: fde09ef8-9a9e-11ef-b91f-525400e091e6
+  Job id: 880d8e92-9bb2-11ef-9300-525400e091e6
 
   '
 GluGluHTo2Tau_UncorrelatedDecay_CPodd_UnFiltered_ProdAndDecay.json: 'Job successfully
   submitted.
 
-  Job id: fed22c46-9a9e-11ef-a983-525400e091e6
+  Job id: 892af1fc-9bb2-11ef-a61c-525400e091e6
 
   '
 GluGluHTo2Tau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
 
-  Job id: ffc47e60-9a9e-11ef-b91f-525400e091e6
+  Job id: 8a47b688-9bb2-11ef-9300-525400e091e6
 
   '
 GluGluHTo2Tau_UncorrelatedDecay_MM_Filtered_ProdAndDecay.json: 'Job successfully submitted.
 
-  Job id: 00b2bc38-9a9f-11ef-a983-525400e091e6
+  Job id: 8b58263e-9bb2-11ef-a61c-525400e091e6
 
   '
 GluGluHTo2Tau_UncorrelatedDecay_MM_UnFiltered_ProdAndDecay.json: 'Job successfully
   submitted.
 
-  Job id: 01bcfb52-9a9f-11ef-a983-525400e091e6
+  Job id: 8c544234-9bb2-11ef-9300-525400e091e6
 
   '
 GluGluHTo2Tau_UncorrelatedDecay_SM_Filtered_ProdAndDecay.json: 'Job successfully submitted.
 
-  Job id: 02df1592-9a9f-11ef-92db-525400e091e6
+  Job id: 8d317e2e-9bb2-11ef-a61c-525400e091e6
 
   '
 GluGluHTo2Tau_UncorrelatedDecay_SM_UnFiltered_ProdAndDecay.json: 'Job successfully
   submitted.
 
-  Job id: 03f88a44-9a9f-11ef-a983-525400e091e6
+  Job id: 8de00dae-9bb2-11ef-a61c-525400e091e6
 
   '
 GluGluHTo2Tau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
 
-  Job id: 050a52c8-9a9f-11ef-92db-525400e091e6
+  Job id: 8e98beda-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_1000_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 61032230-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_100_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 621c8cec-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_105_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6339ca72-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_1100_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6462c200-9bb2-11ef-8a7b-525400e091e6
+
+  '
+GluGluHto2Tau_M_110_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 66133fc6-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_115_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6728ae1e-9bb2-11ef-8a7b-525400e091e6
+
+  '
+GluGluHto2Tau_M_1200_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 68486af0-9bb2-11ef-8a7b-525400e091e6
+
+  '
+GluGluHto2Tau_M_120_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 69fe1d68-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_125_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6b17b0d8-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_130_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6c29c966-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_135_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6d167928-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_1400_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6dd83afe-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_140_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6e9edfb0-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_1600_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 6f67e77a-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_160_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7028b6da-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_1800_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 70e78ac4-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_180_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 71a968ec-9bb2-11ef-8a7b-525400e091e6
+
+  '
+GluGluHto2Tau_M_2000_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 726b09de-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_200_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7329f88a-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_2300_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 73e4b2e2-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_250_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 74a71b02-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_2600_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 75738534-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_2900_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 765e1aea-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_300_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7756c1cc-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_3200_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 785ee6f8-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_3500_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 796f92b8-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_350_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7a86478c-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_400_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7b929a4a-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_450_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7c8f443e-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_500_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7d07a5b4-9bb2-11ef-8a7b-525400e091e6
+
+  '
+GluGluHto2Tau_M_600_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7d868852-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_60_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7e18066a-9bb2-11ef-8a7b-525400e091e6
+
+  '
+GluGluHto2Tau_M_65_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7eca162a-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_700_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 7f8cd6f6-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_70_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 80545726-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_75_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 8122ec12-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_800_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 81f5051c-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_80_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 82db59d6-9bb2-11ef-b564-525400e091e6
+
+  '
+GluGluHto2Tau_M_85_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 83c55b6c-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_900_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 84c50c24-9bb2-11ef-9300-525400e091e6
+
+  '
+GluGluHto2Tau_M_90_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 85dc3434-9bb2-11ef-a61c-525400e091e6
+
+  '
+GluGluHto2Tau_M_95_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 86f185d6-9bb2-11ef-a61c-525400e091e6
 
   '
 MuonEG_Run2022C.json: 'Job successfully submitted.
 
-  Job id: 06214e00-9a9f-11ef-b91f-525400e091e6
+  Job id: 8f66fd68-9bb2-11ef-a61c-525400e091e6
 
   '
 MuonEG_Run2022D.json: 'Job successfully submitted.
 
-  Job id: 071e5136-9a9f-11ef-b91f-525400e091e6
+  Job id: 9032dd84-9bb2-11ef-b564-525400e091e6
 
   '
 Muon_Run2022C.json: 'Job successfully submitted.
 
-  Job id: 08182df0-9a9f-11ef-92db-525400e091e6
+  Job id: 911905a2-9bb2-11ef-b564-525400e091e6
 
   '
 Muon_Run2022D.json: 'Job successfully submitted.
 
-  Job id: 08fe929a-9a9f-11ef-92db-525400e091e6
+  Job id: 91fb475a-9bb2-11ef-9300-525400e091e6
 
   '
 ST_tW_antitop_2L2Nu.json: 'Job successfully submitted.
 
-  Job id: 0caa0a28-9a9f-11ef-92db-525400e091e6
+  Job id: 974dee24-9bb2-11ef-8a7b-525400e091e6
 
   '
 ST_tW_antitop_2L2Nu_ext1.json: 'Job successfully submitted.
 
-  Job id: 0bfec3d4-9a9f-11ef-b91f-525400e091e6
+  Job id: 963356c8-9bb2-11ef-9300-525400e091e6
 
   '
 ST_tW_antitop_4Q.json: 'Job successfully submitted.
 
-  Job id: 0dec108e-9a9f-11ef-9053-525400e091e6
+  Job id: 99720bd6-9bb2-11ef-8a7b-525400e091e6
 
   '
 ST_tW_antitop_4Q_ext1.json: 'Job successfully submitted.
 
-  Job id: 0d4aca6c-9a9f-11ef-9053-525400e091e6
+  Job id: 986384b8-9bb2-11ef-a61c-525400e091e6
 
   '
 ST_tW_antitop_LNu2Q.json: 'Job successfully submitted.
 
-  Job id: 0f4048f6-9a9f-11ef-92db-525400e091e6
+  Job id: 9b9ae13a-9bb2-11ef-b564-525400e091e6
 
   '
 ST_tW_antitop_LNu2Q_ext1.json: 'Job successfully submitted.
 
-  Job id: 0e956094-9a9f-11ef-92db-525400e091e6
+  Job id: 9a90a2a2-9bb2-11ef-a61c-525400e091e6
 
   '
 ST_tW_top_2L2Nu.json: 'Job successfully submitted.
 
-  Job id: 106dcd20-9a9f-11ef-9053-525400e091e6
+  Job id: 9d8a8158-9bb2-11ef-a61c-525400e091e6
 
   '
 ST_tW_top_2L2Nu_ext1.json: 'Job successfully submitted.
 
-  Job id: 0fde6bee-9a9f-11ef-92db-525400e091e6
+  Job id: 9c95edf0-9bb2-11ef-8a7b-525400e091e6
 
   '
 ST_tW_top_4Q.json: 'Job successfully submitted.
 
-  Job id: 117efa2c-9a9f-11ef-9053-525400e091e6
+  Job id: 9f56abce-9bb2-11ef-a61c-525400e091e6
 
   '
 ST_tW_top_4Q_ext1.json: 'Job successfully submitted.
 
-  Job id: 10f99850-9a9f-11ef-92db-525400e091e6
+  Job id: 9e71b8a2-9bb2-11ef-a61c-525400e091e6
 
   '
 ST_tW_top_LNu2Q.json: 'Job successfully submitted.
 
-  Job id: 129c576a-9a9f-11ef-92db-525400e091e6
+  Job id: a10c950a-9bb2-11ef-b564-525400e091e6
 
   '
 ST_tW_top_LNu2Q_ext1.json: 'Job successfully submitted.
 
-  Job id: 120d7a0e-9a9f-11ef-b91f-525400e091e6
+  Job id: a0351e7c-9bb2-11ef-a61c-525400e091e6
 
   '
 ST_t_channel_antitop_4f_InclusiveDecays.json: 'Job successfully submitted.
 
-  Job id: 0a96ca14-9a9f-11ef-b91f-525400e091e6
+  Job id: 93c8137e-9bb2-11ef-8a7b-525400e091e6
 
   '
 ST_t_channel_top_4f_InclusiveDecays.json: 'Job successfully submitted.
 
-  Job id: 0b5036ca-9a9f-11ef-b91f-525400e091e6
+  Job id: 94a49f38-9bb2-11ef-a61c-525400e091e6
 
   '
 SingleMuon_Run2022C.json: 'Job successfully submitted.
 
-  Job id: 09d197e4-9a9f-11ef-a983-525400e091e6
+  Job id: 92e3b936-9bb2-11ef-b564-525400e091e6
 
   '
 TT.json: 'Job successfully submitted.
 
-  Job id: 15756616-9a9f-11ef-a983-525400e091e6
+  Job id: a3cf674a-9bb2-11ef-9300-525400e091e6
 
   '
 TT_ext1.json: 'Job successfully submitted.
 
-  Job id: 14c3d31a-9a9f-11ef-9053-525400e091e6
+  Job id: a33192fe-9bb2-11ef-b564-525400e091e6
 
   '
 TTto2L2Nu.json: 'Job successfully submitted.
 
-  Job id: 16f82a6e-9a9f-11ef-b91f-525400e091e6
+  Job id: a4f709ca-9bb2-11ef-8a7b-525400e091e6
 
   '
 TTto2L2Nu_ext1.json: 'Job successfully submitted.
 
-  Job id: 163500ac-9a9f-11ef-b91f-525400e091e6
+  Job id: a4630112-9bb2-11ef-8a7b-525400e091e6
 
   '
 TTto4Q.json: 'Job successfully submitted.
 
-  Job id: 18a08596-9a9f-11ef-9053-525400e091e6
+  Job id: a624a2a8-9bb2-11ef-9300-525400e091e6
 
   '
 TTto4Q_ext1.json: 'Job successfully submitted.
 
-  Job id: 17cab84e-9a9f-11ef-b91f-525400e091e6
+  Job id: a591663c-9bb2-11ef-8a7b-525400e091e6
 
   '
 TTtoLNu2Q.json: 'Job successfully submitted.
 
-  Job id: 1a5a5664-9a9f-11ef-a983-525400e091e6
+  Job id: a74ef2f0-9bb2-11ef-a61c-525400e091e6
 
   '
 TTtoLNu2Q_ext1.json: 'Job successfully submitted.
 
-  Job id: 198072c8-9a9f-11ef-92db-525400e091e6
+  Job id: a6bdb04c-9bb2-11ef-8a7b-525400e091e6
 
   '
 Tau_Run2022C.json: 'Job successfully submitted.
 
-  Job id: 133793a6-9a9f-11ef-b91f-525400e091e6
+  Job id: a1d9b652-9bb2-11ef-8a7b-525400e091e6
 
   '
 Tau_Run2022D.json: 'Job successfully submitted.
 
-  Job id: 14069b92-9a9f-11ef-92db-525400e091e6
+  Job id: a28b1230-9bb2-11ef-a61c-525400e091e6
 
   '
 VBFHToTauTau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
 
-  Job id: 1b353626-9a9f-11ef-92db-525400e091e6
+  Job id: a7d5c3ac-9bb2-11ef-8a7b-525400e091e6
 
   '
 VBFHToTauTau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
 
-  Job id: 1c49fcfe-9a9f-11ef-9053-525400e091e6
+  Job id: a85843a4-9bb2-11ef-a61c-525400e091e6
 
   '
 WW.json: 'Job successfully submitted.
 
-  Job id: 236d9f7c-9a9f-11ef-92db-525400e091e6
+  Job id: b2daec6e-9bb2-11ef-8a7b-525400e091e6
 
   '
 WZ.json: 'Job successfully submitted.
 
-  Job id: 24146438-9a9f-11ef-a983-525400e091e6
+  Job id: b3eb0d8c-9bb2-11ef-a61c-525400e091e6
 
   '
 WminusHToTauTau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
 
-  Job id: 1d1570e6-9a9f-11ef-92db-525400e091e6
+  Job id: a8fa95a0-9bb2-11ef-b564-525400e091e6
 
   '
 WminusHToTauTau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
 
-  Job id: 1d9cfad4-9a9f-11ef-9053-525400e091e6
+  Job id: a99a5036-9bb2-11ef-b564-525400e091e6
 
   '
 WplusHToTauTau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
 
-  Job id: 1e10001a-9a9f-11ef-b91f-525400e091e6
+  Job id: aa6159d8-9bb2-11ef-8a7b-525400e091e6
 
   '
 WplusHToTauTau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
 
-  Job id: 1e9ae388-9a9f-11ef-9053-525400e091e6
+  Job id: ab3d026c-9bb2-11ef-a61c-525400e091e6
 
   '
 WtoLNu_1J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: 1f2f3290-9a9f-11ef-a983-525400e091e6
+  Job id: ac37e812-9bb2-11ef-9300-525400e091e6
 
   '
 WtoLNu_2J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: 1fcda218-9a9f-11ef-92db-525400e091e6
+  Job id: ad44d756-9bb2-11ef-b564-525400e091e6
 
   '
 WtoLNu_3J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: 207c21c6-9a9f-11ef-9053-525400e091e6
+  Job id: ae6374c6-9bb2-11ef-a61c-525400e091e6
 
   '
 WtoLNu_4J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: 2126e746-9a9f-11ef-92db-525400e091e6
+  Job id: af7a6bc6-9bb2-11ef-9300-525400e091e6
 
   '
 WtoLNu_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: 22bec90c-9a9f-11ef-9053-525400e091e6
+  Job id: b1b93d40-9bb2-11ef-8a7b-525400e091e6
 
   '
 WtoLNu_madgraphMLM_ext1.json: 'Job successfully submitted.
 
-  Job id: 221281b0-9a9f-11ef-a983-525400e091e6
+  Job id: b09edc26-9bb2-11ef-a61c-525400e091e6
 
   '
 ZHToTauTau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
 
-  Job id: 24b52012-9a9f-11ef-9053-525400e091e6
+  Job id: b4fc7224-9bb2-11ef-8a7b-525400e091e6
 
   '
 ZHToTauTau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
 
-  Job id: 254e184e-9a9f-11ef-a983-525400e091e6
+  Job id: b6097ab8-9bb2-11ef-b564-525400e091e6
 
   '
 ZZ.json: 'Job successfully submitted.
 
-  Job id: 25e3e9f0-9a9f-11ef-9053-525400e091e6
+  Job id: b710a030-9bb2-11ef-9300-525400e091e6
 
   '
