--- a/samples/Run3_2022.yaml
+++ b/samples/Run3_2022.yaml
@@ -68,3 +68,45 @@
 - WplusHToTauTau_UncorrelatedDecay_Filtered
 - WminusHToTauTau_UncorrelatedDecay_Filtered
 - VBFHToTauTau_UncorrelatedDecay_Filtered
+- GluGluHto2Tau_M_60_2HDM_II
+- GluGluHto2Tau_M_65_2HDM_II
+- GluGluHto2Tau_M_70_2HDM_II
+- GluGluHto2Tau_M_75_2HDM_II
+- GluGluHto2Tau_M_80_2HDM_II
+- GluGluHto2Tau_M_85_2HDM_II
+- GluGluHto2Tau_M_90_2HDM_II
+- GluGluHto2Tau_M_95_2HDM_II
+- GluGluHto2Tau_M_100_2HDM_II
+- GluGluHto2Tau_M_105_2HDM_II
+- GluGluHto2Tau_M_110_2HDM_II
+- GluGluHto2Tau_M_115_2HDM_II
+- GluGluHto2Tau_M_120_2HDM_II
+- GluGluHto2Tau_M_125_2HDM_II
+- GluGluHto2Tau_M_130_2HDM_II
+- GluGluHto2Tau_M_135_2HDM_II
+- GluGluHto2Tau_M_140_2HDM_II
+- GluGluHto2Tau_M_160_2HDM_II
+- GluGluHto2Tau_M_180_2HDM_II
+- GluGluHto2Tau_M_200_2HDM_II
+- GluGluHto2Tau_M_250_2HDM_II
+- GluGluHto2Tau_M_300_2HDM_II
+- GluGluHto2Tau_M_350_2HDM_II
+- GluGluHto2Tau_M_400_2HDM_II
+- GluGluHto2Tau_M_450_2HDM_II
+- GluGluHto2Tau_M_500_2HDM_II
+- GluGluHto2Tau_M_600_2HDM_II
+- GluGluHto2Tau_M_700_2HDM_II
+- GluGluHto2Tau_M_800_2HDM_II
+- GluGluHto2Tau_M_900_2HDM_II
+- GluGluHto2Tau_M_1000_2HDM_II
+- GluGluHto2Tau_M_1100_2HDM_II
+- GluGluHto2Tau_M_1200_2HDM_II
+- GluGluHto2Tau_M_1400_2HDM_II
+- GluGluHto2Tau_M_1600_2HDM_II
+- GluGluHto2Tau_M_1800_2HDM_II
+- GluGluHto2Tau_M_2000_2HDM_II
+- GluGluHto2Tau_M_2300_2HDM_II
+- GluGluHto2Tau_M_2600_2HDM_II
+- GluGluHto2Tau_M_2900_2HDM_II
+- GluGluHto2Tau_M_3200_2HDM_II
+- GluGluHto2Tau_M_3500_2HDM_II
