--- a/submissions/Run3_2022EE.yaml
+++ b/submissions/Run3_2022EE.yaml
@@ -1,25 +1,534 @@
-DYto2L_M-10to50_amcatnloFXFX.json: 'Job successfully submitted.
+DYto2L_M_10to50_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: 1bd282b0-92e2-11ef-8e65-525400e091e6
-
-  '
-DYto2L_M-50_0J_amcatnloFXFX.json: 'Job successfully submitted.
-
-  Job id: 1c535f52-92e2-11ef-81b7-525400e091e6
+  Job id: 16e0d8f4-a1a8-11ef-8225-525400e091e6
 
   '
-DYto2L_M-50_1J_amcatnloFXFX.json: 'Job successfully submitted.
+DYto2L_M_50_1J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: 1d10d064-92e2-11ef-81b7-525400e091e6
-
-  '
-DYto2L_M-50_2J_amcatnloFXFX.json: 'Job successfully submitted.
-
-  Job id: 1e0073e4-92e2-11ef-9783-525400e091e6
+  Job id: 17709c50-a1a8-11ef-a86a-525400e091e6
 
   '
-DYto2L_M-50_amcatnloFXFX.json: 'Job successfully submitted.
+DYto2L_M_50_2J_madgraphMLM.json: 'Job successfully submitted.
 
-  Job id: 1eeb4df6-92e2-11ef-8e65-525400e091e6
+  Job id: 17fb535e-a1a8-11ef-a86a-525400e091e6
+
+  '
+DYto2L_M_50_3J_madgraphMLM.json: 'Job successfully submitted.
+
+  Job id: 1881ae2c-a1a8-11ef-a912-525400e091e6
+
+  '
+DYto2L_M_50_4J_madgraphMLM.json: 'Job successfully submitted.
+
+  Job id: 19076d46-a1a8-11ef-a86a-525400e091e6
+
+  '
+DYto2L_M_50_madgraphMLM.json: 'Job successfully submitted.
+
+  Job id: 1a2b129a-a1a8-11ef-8a89-525400e091e6
+
+  '
+DYto2L_M_50_madgraphMLM_ext1.json: 'Job successfully submitted.
+
+  Job id: 19934c62-a1a8-11ef-8225-525400e091e6
+
+  '
+EGamma_Run2022E.json: 'Job successfully submitted.
+
+  Job id: 1abe4b3c-a1a8-11ef-8a89-525400e091e6
+
+  '
+EGamma_Run2022F.json: 'Job successfully submitted.
+
+  Job id: 1b507606-a1a8-11ef-a86a-525400e091e6
+
+  '
+EGamma_Run2022G.json: 'Job successfully submitted.
+
+  Job id: 1bdebaf6-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHTo2Tau_UncorrelatedDecay_CPodd_Filtered_ProdAndDecay.json: 'Job successfully
+  submitted.
+
+  Job id: 481cb848-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHTo2Tau_UncorrelatedDecay_CPodd_UnFiltered_ProdAndDecay.json: 'Job successfully
+  submitted.
+
+  Job id: 48abe52c-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHTo2Tau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
+
+  Job id: 4938bf74-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHTo2Tau_UncorrelatedDecay_MM_Filtered_ProdAndDecay.json: 'Job successfully submitted.
+
+  Job id: 49cd130e-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHTo2Tau_UncorrelatedDecay_MM_UnFiltered_ProdAndDecay.json: 'Job successfully
+  submitted.
+
+  Job id: 4a5c56f4-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHTo2Tau_UncorrelatedDecay_SM_Filtered_ProdAndDecay.json: 'Job successfully submitted.
+
+  Job id: 4af91c46-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHTo2Tau_UncorrelatedDecay_SM_UnFiltered_ProdAndDecay.json: 'Job successfully
+  submitted.
+
+  Job id: 4b9679be-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHTo2Tau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
+
+  Job id: 4c20cbd2-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_1000_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 1c8f22ba-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHto2Tau_M_100_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 2f18c4fe-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_105_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 2fbc1c76-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_1100_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3060af66-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_110_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 30f5966c-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHto2Tau_M_115_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 31805220-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_1200_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 32060db6-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_120_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 328e4816-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_125_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 331622d6-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_130_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 339dc6dc-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHto2Tau_M_135_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3424f832-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHto2Tau_M_1400_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 34ade91c-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_140_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 35332f28-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_1600_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 35bbad08-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_160_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 36457e16-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_1800_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 36d50a90-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_180_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 375eb9fc-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_2000_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 37ec3110-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_200_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3879d2d6-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_2300_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3937df60-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_250_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 39c72260-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHto2Tau_M_2600_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3a550ee0-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_2900_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3afa9d2e-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_300_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3bb22ad4-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_3200_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3c7f47d0-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_3500_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3d491d1c-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_350_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3e171c30-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_400_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3ed569c4-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_450_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 3f8c99aa-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHto2Tau_M_500_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 4036fab2-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_600_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 40cf35fc-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_60_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 4156c8b4-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_65_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 41df7240-a1a8-11ef-a86a-525400e091e6
+
+  '
+GluGluHto2Tau_M_700_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 426976e8-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_70_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 43176c1c-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHto2Tau_M_75_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 43bc7824-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_800_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 444aab30-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_80_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 44d3cf5a-a1a8-11ef-8225-525400e091e6
+
+  '
+GluGluHto2Tau_M_85_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 45662972-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_900_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 4623b6c2-a1a8-11ef-8a89-525400e091e6
+
+  '
+GluGluHto2Tau_M_90_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 46e3fd2e-a1a8-11ef-a912-525400e091e6
+
+  '
+GluGluHto2Tau_M_95_2HDM_II.json: 'Job successfully submitted.
+
+  Job id: 478c779c-a1a8-11ef-8a89-525400e091e6
+
+  '
+MuonEG_Run2022E.json: 'Job successfully submitted.
+
+  Job id: 4cab1bc0-a1a8-11ef-a86a-525400e091e6
+
+  '
+MuonEG_Run2022F.json: 'Job successfully submitted.
+
+  Job id: 4d3ba3c0-a1a8-11ef-a912-525400e091e6
+
+  '
+MuonEG_Run2022G.json: 'Job successfully submitted.
+
+  Job id: 4dc7f1b8-a1a8-11ef-a912-525400e091e6
+
+  '
+Muon_Run2022E.json: 'Job successfully submitted.
+
+  Job id: 4e592a0c-a1a8-11ef-8a89-525400e091e6
+
+  '
+Muon_Run2022F.json: 'Job successfully submitted.
+
+  Job id: 4eecf2aa-a1a8-11ef-a86a-525400e091e6
+
+  '
+Muon_Run2022G.json: 'Job successfully submitted.
+
+  Job id: 4f7d322a-a1a8-11ef-a912-525400e091e6
+
+  '
+ST_tW_antitop_2L2Nu.json: 'Job successfully submitted.
+
+  Job id: 51bbc3da-a1a8-11ef-a912-525400e091e6
+
+  '
+ST_tW_antitop_2L2Nu_ext1.json: 'Job successfully submitted.
+
+  Job id: 5123c0c6-a1a8-11ef-a86a-525400e091e6
+
+  '
+ST_tW_antitop_4Q.json: 'Job successfully submitted.
+
+  Job id: 530f6fca-a1a8-11ef-8a89-525400e091e6
+
+  '
+ST_tW_antitop_4Q_ext1.json: 'Job successfully submitted.
+
+  Job id: 525a366e-a1a8-11ef-a912-525400e091e6
+
+  '
+ST_tW_antitop_LNu2Q.json: 'Job successfully submitted.
+
+  Job id: 54ae6ae8-a1a8-11ef-8225-525400e091e6
+
+  '
+ST_tW_antitop_LNu2Q_ext1.json: 'Job successfully submitted.
+
+  Job id: 53bfb07e-a1a8-11ef-a86a-525400e091e6
+
+  '
+ST_tW_top_2L2Nu.json: 'Job successfully submitted.
+
+  Job id: 561d939a-a1a8-11ef-a86a-525400e091e6
+
+  '
+ST_tW_top_2L2Nu_ext1.json: 'Job successfully submitted.
+
+  Job id: 5569204a-a1a8-11ef-a912-525400e091e6
+
+  '
+ST_tW_top_4Q.json: 'Job successfully submitted.
+
+  Job id: 584b7fd8-a1a8-11ef-a912-525400e091e6
+
+  '
+ST_tW_top_4Q_ext1.json: 'Job successfully submitted.
+
+  Job id: 5778c606-a1a8-11ef-8225-525400e091e6
+
+  '
+ST_tW_top_LNu2Q.json: 'Job successfully submitted.
+
+  Job id: 59ddf632-a1a8-11ef-a86a-525400e091e6
+
+  '
+ST_tW_top_LNu2Q_ext1.json: 'Job successfully submitted.
+
+  Job id: 591b790e-a1a8-11ef-8225-525400e091e6
+
+  '
+ST_t_channel_antitop_4f_InclusiveDecays.json: 'Job successfully submitted.
+
+  Job id: 5007e1f4-a1a8-11ef-a86a-525400e091e6
+
+  '
+ST_t_channel_top_4f_InclusiveDecays.json: 'Job successfully submitted.
+
+  Job id: 509a1650-a1a8-11ef-8a89-525400e091e6
+
+  '
+TTto2L2Nu.json: 'Job successfully submitted.
+
+  Job id: 5f3f53be-a1a8-11ef-8225-525400e091e6
+
+  '
+TTto2L2Nu_ext1.json: 'Job successfully submitted.
+
+  Job id: 5df12fe6-a1a8-11ef-8225-525400e091e6
+
+  '
+TTto4Q.json: 'Job successfully submitted.
+
+  Job id: 61e062de-a1a8-11ef-a86a-525400e091e6
+
+  '
+TTto4Q_ext1.json: 'Job successfully submitted.
+
+  Job id: 60e3664c-a1a8-11ef-a912-525400e091e6
+
+  '
+TTtoLNu2Q.json: 'Job successfully submitted.
+
+  Job id: 63f52b40-a1a8-11ef-a912-525400e091e6
+
+  '
+TTtoLNu2Q_ext1.json: 'Job successfully submitted.
+
+  Job id: 62cc7e76-a1a8-11ef-a86a-525400e091e6
+
+  '
+Tau_Run2022E.json: 'Job successfully submitted.
+
+  Job id: 5aa75342-a1a8-11ef-a86a-525400e091e6
+
+  '
+Tau_Run2022F.json: 'Job successfully submitted.
+
+  Job id: 5c5e0a32-a1a8-11ef-a912-525400e091e6
+
+  '
+Tau_Run2022G.json: 'Job successfully submitted.
+
+  Job id: 5d4d469c-a1a8-11ef-8a89-525400e091e6
+
+  '
+VBFHToTauTau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
+
+  Job id: 65a4515a-a1a8-11ef-8225-525400e091e6
+
+  '
+VBFHToTauTau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
+
+  Job id: 66ccffc8-a1a8-11ef-8a89-525400e091e6
+
+  '
+WW.json: 'Job successfully submitted.
+
+  Job id: 777a187e-a1a8-11ef-a912-525400e091e6
+
+  '
+WZ.json: 'Job successfully submitted.
+
+  Job id: 78afd2a6-a1a8-11ef-a86a-525400e091e6
+
+  '
+WminusHToTauTau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
+
+  Job id: 69225cdc-a1a8-11ef-8a89-525400e091e6
+
+  '
+WminusHToTauTau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
+
+  Job id: 6abde430-a1a8-11ef-8225-525400e091e6
+
+  '
+WplusHToTauTau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
+
+  Job id: 6be429e6-a1a8-11ef-a912-525400e091e6
+
+  '
+WplusHToTauTau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
+
+  Job id: 6dbfcaa4-a1a8-11ef-8225-525400e091e6
+
+  '
+WtoLNu_1J_madgraphMLM.json: 'Job successfully submitted.
+
+  Job id: 6f02a0d0-a1a8-11ef-8a89-525400e091e6
+
+  '
+WtoLNu_2J_madgraphMLM.json: 'Job successfully submitted.
+
+  Job id: 710b3c7a-a1a8-11ef-8225-525400e091e6
+
+  '
+WtoLNu_3J_madgraphMLM.json: 'Job successfully submitted.
+
+  Job id: 72691074-a1a8-11ef-8225-525400e091e6
+
+  '
+WtoLNu_4J_madgraphMLM.json: 'Job successfully submitted.
+
+  Job id: 73951cc2-a1a8-11ef-a86a-525400e091e6
+
+  '
+WtoLNu_madgraphMLM.json: 'Job successfully submitted.
+
+  Job id: 7642228a-a1a8-11ef-a86a-525400e091e6
+
+  '
+WtoLNu_madgraphMLM_ext1.json: 'Job successfully submitted.
+
+  Job id: 74e8cfe2-a1a8-11ef-a912-525400e091e6
+
+  '
+ZHToTauTau_UncorrelatedDecay_Filtered.json: 'Job successfully submitted.
+
+  Job id: 79e24e4c-a1a8-11ef-8225-525400e091e6
+
+  '
+ZHToTauTau_UncorrelatedDecay_UnFiltered.json: 'Job successfully submitted.
+
+  Job id: 7b0b6740-a1a8-11ef-a86a-525400e091e6
+
+  '
+ZZ.json: 'Job successfully submitted.
+
+  Job id: 7c3a07ac-a1a8-11ef-a912-525400e091e6
 
   '
